--- a/client/package.json
+++ b/client/package.json
@@ -10,12 +10,28 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@codemirror/autocomplete": "^6.18.1",
+    "@codemirror/commands": "^6.7.0",
+    "@codemirror/lang-java": "^6.0.1",
+    "@codemirror/state": "^6.4.1",
+    "@codemirror/theme-one-dark": "^6.1.2",
+    "@codemirror/view": "^6.34.1",
+    "@monaco-editor/react": "^4.6.0",
+    "@mui/material": "^6.1.4",
+    "@radix-ui/react-avatar": "^1.1.1",
+    "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-toast": "^1.2.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "codemirror": "^6.0.1",
+    "framer-motion": "^11.11.9",
     "lucide-react": "^0.453.0",
+    "monaco-editor": "^0.52.0",
+    "mui": "^0.0.1",
     "react": "^18.3.1",
+    "react-ace": "^12.0.0",
     "react-avatar": "^5.0.3",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
