--- a/client/package.json
+++ b/client/package.json
@@ -21,11 +21,12 @@
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "codemirror": "^6.0.1",
+    "codemirror": "^5.65.15",
     "framer-motion": "^11.11.9",
     "lucide-react": "^0.453.0",
     "monaco-editor": "^0.52.0",
