--- a/client/package.json
+++ b/client/package.json
@@ -23,13 +23,17 @@
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tabs": "^1.1.1",
     "@radix-ui/react-toast": "^1.2.2",
+    "@radix-ui/react-tooltip": "^1.1.3",
+    "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "codemirror": "^5.65.15",
     "framer-motion": "^11.11.9",
     "lucide-react": "^0.453.0",
     "monaco-editor": "^0.52.0",
+    "monaco-editor-webpack-plugin": "^7.1.0",
     "mui": "^0.0.1",
     "react": "^18.3.1",
     "react-ace": "^12.0.0",
@@ -40,7 +44,8 @@
     "socket.io-client": "^4.8.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
-    "uuid": "^10.0.0"
+    "uuid": "^10.0.0",
+    "vite-plugin-monaco-editor": "^1.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
