--- a/server/package.json
+++ b/server/package.json
@@ -11,8 +11,11 @@
   "author": "Aman Singh",
   "license": "ISC",
   "dependencies": {
+    "child_process": "^1.0.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "fs": "^0.0.1-security",
     "nodemon": "^3.1.7",
     "socket.io": "^4.8.0"
   }
