--- a/server/package.json
+++ b/server/package.json
@@ -15,7 +15,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "express-rate-limit": "^7.4.1",
     "fs": "^0.0.1-security",
+    "helmet": "^8.0.0",
     "nodemon": "^3.1.7",
     "socket.io": "^4.8.0"
   }
